force-app/main/default/objects/DHS_CaseCancellationRequest__c/DHS_CaseCancellationRequest__c.object-meta.xml
<CustomObject>
    <label>CaseCancellationRequest</label>
    <nameField>
        <displayFormat>CCR-{0000000}</displayFormat>
        <label>CaseCancellationRequest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseCancellationRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>