force-app/main/default/objects/DHS_CaseCancellationRequest__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>